Removed old Error generator and references. Added Repositories. Added Interfaces and reworked so all Generators and repositories now utilizes interfaces.

--- a/DummyDataGenerators.API/app.config
+++ b/DummyDataGenerators.API/app.config
@@ -14,5 +14,11 @@
   -->
   <appSettings>
     <add key="logMode" value="2" />
+    <add key="connectionString" value="Server=(localdb)\\MSSQLLocalDB;Database=_CHANGE_ME;Trusted_Connection=True;MultipleActiveResultSets=true"/>
+    <add key="ErrorTable" value="Transaction_Errors"/>
+    <add key="AgentsTable" value="Agents"/>
+    <add key="CustomersTable" value="Customers"/>
+    <add key="TransactionsTable" value="Transactions"/>
+    <add key="AccessPermissionsTable" value="Access_Permissions"/>
   </appSettings>
 </configuration>
