--- a/DummyDataGenerators.API/appsettings.json
+++ b/DummyDataGenerators.API/appsettings.json
@@ -6,5 +6,15 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=_CHANGE_ME;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "TableNames": {
+    "Errors": "",
+    "Transactions": "",
+    "Customers": "",
+    "Access_Permissions": "",
+    "Agents": ""
+  }
 }
