Move user object to common

--- a/DummyDataGenerators.WebInterface/DummyDataGenerators.WebInterface.csproj
+++ b/DummyDataGenerators.WebInterface/DummyDataGenerators.WebInterface.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\DummyDataGenerators.Common\DummyDataGenerators.Common.csproj" />
     <ProjectReference Include="..\DummyDataGenerators.DTO\DummyDataGenerators.DTO.csproj" />
   </ItemGroup>
 
